# Dining_Philosophers_CPP

./: CMakeLists.txt
include/: display.hpp  fork.hpp  philosopher.hpp  philosopher_state.hpp  table_setup.hpp
src/: display.cpp  fork.cpp  main.cpp  philosopher.cpp  table_setup.cpp
